simplify things a bit